attempt 1 at fixing the map rounded corners not displaying in Contact subpage on mobile Safari

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -209,6 +209,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: flex-start;
+  z-index: 10;
 }
 
 .map-wrapper-desktop {
